sample/server-backup/retrieveUnpackaged/objects/Bundle__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bundles</relationshipLabel>
        <relationshipName>Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Ordered__c</fullName>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qty__c</fullName>
        <label>Qty</label>
        <summarizedField>Bundle_Item__c.Qty__c</summarizedField>
        <summaryForeignKey>Bundle_Item__c.Bundle__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted to Distributors</fullName>
                </value>
                <value>
                    <fullName>Ordered by Distributor</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Approved by Manufacturing</fullName>
                    <isActive>false</isActive>
                    <label>Approved by Manufacturing</label>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                    <isActive>false</isActive>
                    <label>Ordered</label>
                </value>
                <value>
                    <fullName>Submitted to Distributor</fullName>
                    <isActive>false</isActive>
                    <label>Submitted to Distributor</label>
                </value>
                <value>
                    <fullName>Submitted to Manufacturing</fullName>
                    <isActive>false</isActive>
                    <label>Submitted to Manufacturing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Merchandise Bundle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Merchandise Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>